# cmuq-turtlebot-remote

amcl_demo/: CMakeLists.txt  package.xml
amcl_demo/current_map/: map.yaml  map.yaml~
amcl_demo/launch/: amcl.launch.xml  amcl_demo.launch  amcl_demo.launch.orig
gmapping_demo/: CMakeLists.txt  package.xml
gmapping_demo/launch/: gmapping.launch
turtlebot2_navigation/: CMakeLists.txt  package.xml  package.xml~
turtlebot2_navigation/current_map/: .yaml  map.pgm  map.yaml
turtlebot2_navigation/launch/: amcl.launch.xml~  amcl_demo.launch~  move_base.launch  move_base.launch~  navigate.launch~
turtlebot2_navigation/launch/includes/: move_base.launch.xml
turtlebot2_navigation/param/: dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
turtlebot_rviz_launchers/rviz/: navigation.rviz
