<package>
  <name>turtlebot2_navigation</name>
  <version>2.4.2</version>
  <description>
     turtlebot2_navigation provides a complete 3D model of the TurtleBot for simulation and visualization. The files in this package are parsed and used by a variety of other components. Most users will not interact directly with this package.
  </description>
  <author>Melonee Wise</author>
  <author email="stonier@yujinrobot.com">Daniel Stonier</author>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/navigation_demo</url>
  <url type="repository">https://github.com/turtlebot/turtlebot</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>kobuki_description</run_depend>
  <run_depend>create_description</run_depend>
</package>
